Added info for Tea Cozy

--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
             </a>
         </div>
         <div class="card">
+            <h2>Tea Cozy Website</h2>
+            <a href="https://maxi908.github.io/Tea-Cozy-Project/" target="_blank">Live Site</a> - <a href="https://github.com/Maxi908/Tea-Cozy-Project" target="_blank">GitHub Repository</a>
+            <p>This project involved creating a website based on the redline provided as part of the Learn Intermediate CSS Course on Codecademy. For the site, I had the choice of using opacity for the font but I thought that bolded text without it looked better as it stood out against the black background and made it easier to read.</p>
+            <div class="card-images">
+                <img src="./assets/Screen Shot 2024-09-15 at 7.59.31 pm.png">
+            </div>
+            <div class="tags">
+                <span>HTML</span>
+                <span>CSS</span>
+            </div>
+            </a>
+        </div>
+        <div class="card">
             <h2>Fotomatic Website</h2>
             <a href="https://maxi908.github.io/Off-Platform-Project-Fotomatic/" target="_blank">Live Site</a> - <a href="https://github.com/Maxi908/Off-Platform-Project-Fotomatic" target="_blank">GitHub Repository</a>
             <p>This project involed fixing a website by debugging and restructuring code to restore functionality as part of a Codecademy course. I made improvements, added comments for clarity, and used Google's 'Inspect' tool to ensure alignment with the desired layout. This project improved my debugging skills and understanding of website functionality and responsive design.</p>
