--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
             <div class="about-me-content">
                 <div class="about-me-text">
                     <h1>Max Muscat</h1>
-                    <p>I am a highly passionate and creative front-end developer with a strong interest in web and app development. With a background in Writing and Visual Art, I am deeply engaged in web design and the intersection of coding and creativity. My focus is on UI and UX Design, and I am committed to applying these principles in real-world projects. I am dedicated to continuous learning and development, eagerly seeking opportunities to expand my knowledge of coding, front-end development, and emerging frameworks and technologies.</p>
+                    <p>As a junior Front-End Developer, I am driven by a deep passion for web development and a
+                        commitment to creating engaging digital experiences. Although I am early in my career, I have
+                        honed my skills in HTML, CSS, JavaScript, and React.js through hands-on projects and coursework.
+                        My background in Writing and Visual Art allows me to approach web design with a creative and
+                        detail-oriented mindset. I am enthusiastic about learning new technologies and am dedicated to
+                        growing my expertise in front-end development.
+                        I’m excited to contribute my enthusiasm and developing skills to collaborative projects and
+                        eager to tackle new challenges in the tech field.
+                    </p>
                 </div>
             </div>
         </section>
@@ -23,8 +31,12 @@
     <div class="container" id="projects">
         <div class="card">
             <h2>Ridgeline Prototype</h2>
-            <a href="https://www.figma.com/proto/x55pIqklanzIuiTxHC3ZF8/Ridgeline-wireframe?node-id=1-6&t=X4ObLIUbNu6ITPZY-0&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A6&device-frame=0" target="_blank">Prototype Link</a> 
-            <p>This wireframe and prototype were designed as part of the Introduction to UI and UX Design course on Codecademy. The first image shows the basic wireframe I created using Paint X, while the second image is a screenshot of the wireframe in Figma. Click the link to interact with the prototype, where you can choose a color, pick a size, add the product to your cart, and navigate through the image slides.</p>
+            <a href="https://www.figma.com/proto/x55pIqklanzIuiTxHC3ZF8/Ridgeline-wireframe?node-id=1-6&t=X4ObLIUbNu6ITPZY-0&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A6&device-frame=0"
+                target="_blank">Prototype Link</a>
+            <p>This wireframe and prototype were designed as part of the Introduction to UI and UX Design course on
+                Codecademy. The first image shows the basic wireframe I created using Paint X, while the second image is
+                a screenshot of the wireframe in Figma. Click the link to interact with the prototype, where you can
+                choose a color, pick a size, add the product to your cart, and navigate through the image slides.</p>
             <div class="card-images">
                 <img src="./assets/UI:UX wireframe.png">
                 <img src="./assets/Screen Shot 2024-07-26 at 7.08.01 pm.png">
@@ -36,7 +48,8 @@
         </div>
         <div class="card">
             <h2>React To Do App</h2>
-            <a href="https://annisa-nye.github.io/react-todo-app/" target="_blank">Live Demo</a> - <a href="https://github.com/Maxi908/Todo-App" target="_blank">GitHub Repository</a>
+            <a href="https://annisa-nye.github.io/react-todo-app/" target="_blank">Live Demo</a> - <a
+                href="https://github.com/Maxi908/Todo-App" target="_blank">GitHub Repository</a>
             <p>This was a group project where we created a To Do App using React. A key highlight for me was
                 implementing a custom hook to display API data, marking my first experience with custom hooks.</p>
             <div class="card-images">
@@ -49,8 +62,12 @@
         </div>
         <div class="card">
             <h2>Product Website - Fluffy Socks</h2>
-            <a href="https://annisa-nye.github.io/GA-Javascript-Project/" target="_blank">Live Site</a> - <a href="https://github.com/Maxi908/GA-Javascript-Project" target="_blank">GitHub Repository </a>
-            <p>Developed a dynamic website as part of a group project during Generation Australia's Web Developer Program. My tasks included integrating API data, implementing date and time features, and enhancing the site's visual appeal with styling and footer design. This project improved my front-end development skills and attention to detail.</p>
+            <a href="https://annisa-nye.github.io/GA-Javascript-Project/" target="_blank">Live Site</a> - <a
+                href="https://github.com/Maxi908/GA-Javascript-Project" target="_blank">GitHub Repository </a>
+            <p>Developed a dynamic website as part of a group project during Generation Australia's Web Developer
+                Program. My tasks included integrating API data, implementing date and time features, and enhancing the
+                site's visual appeal with styling and footer design. This project improved my front-end development
+                skills and attention to detail.</p>
             <div class="card-images">
                 <img src="./assets/Screen Shot 2024-07-26 at 7.38.57 pm.png">
             </div>
@@ -63,8 +80,12 @@
         </div>
         <div class="card">
             <h2>Tea Cozy Website</h2>
-            <a href="https://maxi908.github.io/Tea-Cozy-Project/" target="_blank">Live Site</a> - <a href="https://github.com/Maxi908/Tea-Cozy-Project" target="_blank">GitHub Repository</a>
-            <p>This project involved creating a website based on the redline provided as part of the Learn Intermediate CSS Course on Codecademy. For the site, I had the choice of using opacity for the font but I thought that bolded text without it looked better as it stood out against the black background and made it easier to read.</p>
+            <a href="https://maxi908.github.io/Tea-Cozy-Project/" target="_blank">Live Site</a> - <a
+                href="https://github.com/Maxi908/Tea-Cozy-Project" target="_blank">GitHub Repository</a>
+            <p>This project involved creating a website based on the redline provided as part of the Learn Intermediate
+                CSS Course on Codecademy. For the site, I had the choice of using opacity for the font but I thought
+                that bolded text without it looked better as it stood out against the black background and made it
+                easier to read.</p>
             <div class="card-images">
                 <img src="./assets/Screen Shot 2024-09-15 at 7.59.31 pm.png">
             </div>
@@ -76,8 +97,12 @@
         </div>
         <div class="card">
             <h2>Fotomatic Website</h2>
-            <a href="https://maxi908.github.io/Off-Platform-Project-Fotomatic/" target="_blank">Live Site</a> - <a href="https://github.com/Maxi908/Off-Platform-Project-Fotomatic" target="_blank">GitHub Repository</a>
-            <p>This project involed fixing a website by debugging and restructuring code to restore functionality as part of a Codecademy course. I made improvements, added comments for clarity, and used Google's 'Inspect' tool to ensure alignment with the desired layout. This project improved my debugging skills and understanding of website functionality and responsive design.</p>
+            <a href="https://maxi908.github.io/Off-Platform-Project-Fotomatic/" target="_blank">Live Site</a> - <a
+                href="https://github.com/Maxi908/Off-Platform-Project-Fotomatic" target="_blank">GitHub Repository</a>
+            <p>This project involed fixing a website by debugging and restructuring code to restore functionality as
+                part of a Codecademy course. I made improvements, added comments for clarity, and used Google's
+                'Inspect' tool to ensure alignment with the desired layout. This project improved my debugging skills
+                and understanding of website functionality and responsive design.</p>
             <div class="card-images">
                 <img src="./assets/Screen Shot 2024-07-26 at 7.40.49 pm.png">
             </div>
@@ -89,9 +114,11 @@
         </div>
         <div class="card">
             <h2>Excursion Website and Dasmoto's Arts & Crafts Website</h2>
-            <a href="https://maxi908.github.io/excursion/" target="_blank">Excursion Live Site</a> - <a href="https://github.com/Maxi908/excursion" target="_blank">Excursion Repository</a>
+            <a href="https://maxi908.github.io/excursion/" target="_blank">Excursion Live Site</a> - <a
+                href="https://github.com/Maxi908/excursion" target="_blank">Excursion Repository</a>
             <br>
-            <a href="https://maxi908.github.io/Dasmoto-project/" target="_blank">Dasmoto's Live Site</a> - <a href="https://github.com/Maxi908/Dasmoto-project" target="_blank">Dasmoto's Repository</a>
+            <a href="https://maxi908.github.io/Dasmoto-project/" target="_blank">Dasmoto's Live Site</a> - <a
+                href="https://github.com/Maxi908/Dasmoto-project" target="_blank">Dasmoto's Repository</a>
             <p>Created simple, responsive one-page designs using HTML and CSS as part of Codecademy projects. These
                 exercises focused on honing my design skills and mastering fundamental web technologies.</p>
             <div class="card-images">
@@ -106,8 +133,13 @@
         </div>
         <div class="card">
             <h2>Pokemon Generator</h2>
-            <a href="https://maxi908.github.io/Pokemon-Api-Tutorial/" target="_blank">Live Site</a> - <a href="https://github.com/Maxi908/Pokemon-Api-Tutorial" target="_blank">GitHub Repository</a>
-            <p>I built a user-friendly Pokémon Generator as part of my introduction to JavaScript, following a YouTube tutorial by BroCode. Users can input a Pokémon name to see an image displayed, showcasing my ability to create interactive web applications with basic JavaScript functionality. I included some styling but kept it simple, focusing primarily on getting familiar with fetching data from an API using JavaScript.</p>
+            <a href="https://maxi908.github.io/Pokemon-Api-Tutorial/" target="_blank">Live Site</a> - <a
+                href="https://github.com/Maxi908/Pokemon-Api-Tutorial" target="_blank">GitHub Repository</a>
+            <p>I built a user-friendly Pokémon Generator as part of my introduction to JavaScript, following a YouTube
+                tutorial by BroCode. Users can input a Pokémon name to see an image displayed, showcasing my ability to
+                create interactive web applications with basic JavaScript functionality. I included some styling but
+                kept it simple, focusing primarily on getting familiar with fetching data from an API using JavaScript.
+            </p>
             <div class="card-images">
                 <img src="./assets/Screen Shot 2024-07-26 at 7.47.32 pm.png">
             </div>
@@ -120,4 +152,5 @@
         </div>
     </div>
 </body>
+
 </html>
