Edited about info and added recent project info

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <div class="about-me-content">
                 <div class="about-me-text">
                     <h1>Max Muscat</h1>
-                    <p>As a junior Front-End Developer, I am driven by a deep passion for web development and a
+                    <p>As a Junior Web Developer, I am driven by a deep passion for web development and a
                         commitment to creating engaging digital experiences. Although I am early in my career, I have
                         honed my skills in HTML, CSS, JavaScript, and React.js through hands-on projects and coursework.
                         My background in Writing and Visual Art allows me to approach web design with a creative and
                         detail-oriented mindset. I am enthusiastic about learning new technologies and am dedicated to
                         growing my expertise in front-end development.
                         I’m excited to contribute my enthusiasm and developing skills to collaborative projects and
-                        eager to tackle new challenges in the tech field.
+                        I'm eager to tackle new challenges in the tech field.
                     </p>
                 </div>
             </div>
@@ -29,6 +29,23 @@
     </header>
 
     <div class="container" id="projects">
+        <div class="card">
+            <h2>Noel Muscat Sculpture</h2> <h3>Oct 2024</h3>
+            <a href="https://noelmuscatsculpture.com.au/" target="_blank">Live Site</a> - <a
+                href="https://github.com/Maxi908/Noel-Muscat-Sculpture" target="_blank">GitHub Repository </a>
+            <p>I recently completed my first real-world website project for my dad's upcoming sculpture exhibition. He needed a site showcasing his recycled material sculptures, and it was the perfect opportunity for me to apply my web development skills. Despite some challenges, I learned valuable lessons about software updates, file extensions, and preparation. Along the way, I became familiar with tools like Netlify, DNS, and SEO best practices. I'm proud of the result, which received positive feedback, and I look forward to making future improvements. </p>
+            <div class="card-images">
+                <img src="./assets/Screenshot 2024-10-17 at 2.59.15 pm.png">
+            </div>
+            <div class="tags">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+                <span>Netlify</span>
+                <span>SEO best practices</span>
+            </div>
+            </a>
+        </div>
         <div class="card">
             <h2>Ridgeline Prototype</h2>
             <a href="https://www.figma.com/proto/x55pIqklanzIuiTxHC3ZF8/Ridgeline-wireframe?node-id=1-6&t=X4ObLIUbNu6ITPZY-0&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A6&device-frame=0"
